# gavrix-2.0

./: .doit.db  .gitignore  .mailmap  MANIFEST.in  README.md  app.py  dodo.py  pyproject.toml  setup.cfg  test.txt  theme.json
doc/doctrees/: environment.pickle  index.doctree  intro.doctree  menus.doctree
doc/html/: .buildinfo  genindex.html  index.html  intro.html  menus.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/html/_sources/: index.rst.txt  menus.rst.txt
doc_src/: conf.py  intro.rst
doc_src/application/: __init__.py
po/: app.pot
po/ru/LC_MESSAGES/: app.mo  app.po
src/: __main__.py
src/ru/LC_MESSAGES/: app.mo
src/styles/gavrix/: gavrix.tcl
styles/gavrix/: gavrix.tcl
themes/: theme.json
translate/: app.pot
translate/ru/LC_MESSAGES/: app.mo  app.po
