[metadata]
name = Gavrix
version = 2.0.0
url = https://github.com/fickmann/gavrix-2.0
description = Exam project for PythonDevelopment2021 course

[options]
packages = src
include_package_data = True
install_requires = 
    pickle5
    python3-pil.imagetk
    python-magic

[options.package_data]
src = */*/telbot.mo
src = */theme.json
src = styles/